# functor.systems

./: .gitignore  LICENSE  Main.hs  README.md  cabal.project  flake.nix  index.html  justfile  result  treefmt.nix  website.cabal
.github/workflows/: pages.yml
app/: Main.hs  Styles.hs
public/: code.html  functorOS.html  index.html  matrix.html  sunlit.css
public/.well-known/matrix/: client  server
public/~youwen/: index.html
site/: hugo.toml
static/: code.html  index.html  main.css  sunlit.css
static/css/: main.css
